--- a/pmschool/style.css
+++ b/pmschool/style.css
@@ -14,7 +14,7 @@ font-size:20px;
   margin-bottom:50px;
 }
 .register{
-
+color:black;
   padding:15px;
   font-size:18px;
   box-shadow:5px 5px 5px 5px #999999;
