--- a/pmschool/style.css
+++ b/pmschool/style.css
@@ -37,6 +37,9 @@ font-size:20px;
 
 
 /*footer*/
+footer{
+  font-size:10px;
+}
 #lf{
     background-color:white;
     width:100%;
@@ -47,8 +50,8 @@ font-size:20px;
 }
 #lf .fa {
   padding:5px;
-  font-size: 20px;
-  width: 30px;
+  font-size: 15px;
+  width: 25px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
