--- a/pmschool/faqs.css
+++ b/pmschool/faqs.css
@@ -15,11 +15,6 @@ font-size:20px;
   margin-top:100px;
 }
 
-@media screen and (max-width:900){
-  #question{
-
-  }
-}
 
 
 /*footer*/
@@ -29,11 +24,10 @@ footer{
 #lf{
     background-color:white;
     width:100%;
-    position:absolute;
     text-align:center;
     margin-top:100px;
     padding:20px 0 30px 0;
-    bottom: 0;
+    bottom:auto;
 }
 #lf .fa {
   padding:5px;
