--- a/pmschool/login.css
+++ b/pmschool/login.css
@@ -38,11 +38,10 @@ footer{
 #lf{
     background-color:white;
     width:100%;
-    position:absolute;
     text-align:center;
     margin-top:100px;
-    padding:20px 0 30px 0;
-    bottom:0;
+    padding-top:20px;
+   
 }
 #lf .fa {
   padding:5px;
